Building it out

--- a/style.css
+++ b/style.css
@@ -17,3 +17,10 @@ p{
 body{
     background-color: rgb(48, 197, 160);
 }
+
+.center {
+    margin: auto;
+    width: 60%;
+    border: 3px solid #73AD21;
+    padding: 10px;
+}
